# exdesign

./: .gitignore  Installer.sh  Satyristes  UnInstaller.sh  article-ja.satyg  article-ja.satyh  exdesign.opam  exdesign.satyh  readme.md  satysfi-class-exdesign-doc.opam  satysfi-class-exdesign.opam
doc/: Makefile  manual.saty
satysfi-for-windows-ver/: article-ja.satyh  exdesign.satyh  readme.md
