opam-version: "2.0"
name: "exdesign"
version: "0.2+satysfi0.0.3+satyrograhos0.1.5"
synopsis: "A class file easy to customize with SATySFi."
description: "A class file easy to customize with SATySFi."

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "LGPLv3"
homepage: "https://github.com/puripuri2100/exdesign"
bug-reports: "https://github.com/puripuri2100/exdesign/issues"
dev-repo: "git+https://github.com/puripuri2100/exdesign.git"

depends: [
  "satysfi" {>= "0.0.3" & < "0.0.4"}
  "satyrographos" {>= "0.0.1" & < "0.0.2"}
]
build: [
  ["install" "-d" "%share%/satysfi/exdesign/packages"]
  ["install" "-m" "644" "exdesign.satyh" "%share%/satysfi/exdesign/packages"]
]
