opam-version: "2.0"
name: "satysfi-class-exdesign-doc"
version: "0.3.0"
synopsis: "Documentation: A class file easy to customize with SATySFi"
description: """Documentation: A class file easy to customize with SATySFi."""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "LGPLv3"
homepage: "https://github.com/puripuri2100/exdesign"
bug-reports: "https://github.com/puripuri2100/exdesign/issues"
dev-repo: "git+https://github.com/puripuri2100/exdesign.git"

depends: [
  "satysfi" {>= "0.0.3" & < "0.0.7"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
  "satysfi-dist"

  # You may want to include the corresponding library
  "satysfi-class-exdesign" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "class-exdesign-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "class-exdesign-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
