opam-version: "2.0"
name: "satysfi-class-exdesign"
version: "0.2"
synopsis: "A class file easy to customize with SATySFi"
description: """A class file easy to customize with SATySFi."""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "LGPLv3"
homepage: "https://github.com/puripuri2100/exdesign"
bug-reports: "https://github.com/puripuri2100/exdesign/issues"
dev-repo: "git+https://github.com/puripuri2100/exdesign.git"

depends: [
  "satysfi" {>= "0.0.3" & < "0.0.4"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "class-exdesign"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
